--- a/force-app/main/default/classes/NumberCalculator.cls
+++ b/force-app/main/default/classes/NumberCalculator.cls
@@ -1,17 +1,17 @@
 public class NumberCalculator {
     
     // Method to calculate square of a number
-    public static Decimal calculateSquare(Decimal fnumber) {
-        return fnumber * fnumber;
+    public static Decimal calculateSquare(Decimal ftnumber) {
+        return ftnumber * ftnumber;
     }
     
     // Method to calculate square with error handling
-    public static Decimal calculateSquareWithValidation(Decimal fnumber) {
+    public static Decimal calculateSquareWithValidation(Decimal ftnumber) {
         try {
             if(fnumber == null) {
                 throw new CalculatorException('Input number cannot be null');
             }
-            return fnumber * fnumber;
+            return ftnumber * ftnumber;
         } catch(Exception e) {
             System.debug('Error calculating square: ' + e.getMessage());
             throw new CalculatorException('Error calculating square: ' + e.getMessage());
